# thallus

./: .gitignore  DESIGN.md  README.md  pyproject.toml
examples/: todo_app.py
src/thallus/: __init__.py  eval.py  facts.py  ids.py  node.py  roles.py  stdlib.py  store.py  values.py
tests/: test_dedup.py  test_direction.py  test_effects.py  test_eval.py  test_lambda.py  test_merge.py  test_persistence.py  test_properties.py  test_reactive.py  test_recursion.py  test_schema.py  test_store.py  test_types.py  test_vertical_slice.py
