[project]
name = "thallus"
version = "0.1.0"
description = "A computable knowledge graph: a deductive, reactive, bitemporal graph substrate with an embedded homoiconic language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Felix Ubl" }]
keywords = [
    "knowledge-graph",
    "bitemporal",
    "reactive",
    "homoiconic",
    "datalog",
    "graph-database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/felixubl/thallus"
Repository = "https://github.com/felixubl/thallus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thallus"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5", "fastapi>=0.110", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
